Add new metadata
