# src/opera/api/controllers/background_invocation.py
@@ -253,7 +253,7 @@ class InvocationWorkerProcess:
                     opera_validate(service_template, inputs)
                 return None
         except Exception as e:
-            return "{}: {}".format(e.__class__.__name__, xopera_util.mask_workdirs([location, csar_workdir], str(e)),)
+            return "{}: {}".format(e.__class__.__name__, xopera_util.mask_workdirs([location, csar_workdir], str(e)), )
 
     @staticmethod
     def outputs(deployment_id: str):
@@ -287,11 +287,11 @@ class InvocationService:
             workers_num: number of workers
         """
         self.work_queue: multiprocessing.Queue = multiprocessing.Queue()
-        self.workers_pool = multiprocessing.Pool(workers_num, InvocationWorkerProcess.run_internal, (self.work_queue, ))
+        self.workers_pool = multiprocessing.Pool(workers_num, InvocationWorkerProcess.run_internal, (self.work_queue,))
 
     def invoke(self, operation_type: OperationType, blueprint_id: uuid, version_id: uuid,
-               deployment_id: uuid, workers: int, inputs: dict,
-               clean_state: bool = None) -> Invocation:
+               workers: int, inputs: dict, deployment_id: uuid = None,
+               clean_state: bool = None, deployment_label: str = None) -> Invocation:
         now = datetime.datetime.now(tz=datetime.timezone.utc)
         logger.info("Invoking %s with ID %s at %s", operation_type, deployment_id, now.isoformat())
 
@@ -299,6 +299,7 @@ class InvocationService:
 
         inv = Invocation()
         inv.blueprint_id = blueprint_id
+        inv.deployment_label = deployment_label
         inv.version_id = version_id or CSAR_db.get_last_tag(blueprint_id)
         inv.deployment_id = deployment_id or uuid.uuid4()
         inv.state = InvocationState.PENDING
